# batch-data-pipeline

./: .gitignore  Dockerfile  README.md  demo.sh  full_summary.txt
generator/: Cargo.toml  generator
generator/src/: customers.rs  main.rs  orders.rs  payments.rs  products.rs  utils.rs  writer.rs
json2parquet/: Cargo.toml
json2parquet/src/: main.rs
old_generator/: main.go
old_generator/customers/: customers.go
old_generator/orders/: orders.go
past_approaches/json2parquet/src/: main.rs
past_approaches/old_generator/: data.json  go.mod  main.go
past_approaches/old_generator/payments/: payments.go
past_approaches/old_generator/products/: products.go
past_approaches/old_generator/utils/: utils.go
processor/: cycle.sh  data.parquet  gen_data.sh  ingest.py  normalize.py  process.py  requirements.txt  reset_files.sh  sample.sql
processor/scripts/: cycle.sh  gen_data.sh  reset_files.sh  toggle_env.sh
