[package]
name = "generator"
version = "0.1.0"
edition = "2024"

[dependencies]
uuid = { version = "1", features = ["v4"] }
rand = "0.9"                     
chrono = { version = "0.4", features = ["clock", "serde"] }  
serde = { version = "1.0", features = ["derive"] }
serde_json = "1"
rayon = "1.8"
parquet2 = "0.17"
arrow2 = { version = "0.18", features = ["io_parquet"] }  


